monitoring/prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: http01
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: admin
    # nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - ok"
spec:
  tls:
    - hosts:
      - prometheus.104.197.184.111.xip.io
      secretName: prometheus-tls
  rules:
    - host: prometheus.104.197.184.111.xip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus
              servicePort: 9090
